# rust-portfolio

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  railway.toml
migrations/: 0001_create_projects.sql  0002_create_admin_credentials.sql
src/: auth.rs  config.rs  csrf.rs  db.rs  error.rs  lib.rs  main.rs  markdown.rs  models.rs  seed.rs
src/routes/: admin.rs  public.rs
static/css/: app.css
static/js/: visuals.js
templates/: base.html  index.html  project_detail.html
templates/admin/: dashboard.html  login.html  project_form.html  projects.html
